--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
                 <a href="index.html" class="nav-item nav-link ">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="class.html" class="nav-item nav-link">Classes</a>
-                <!-- <a href="team.html" class="nav-item nav-link">Team</a> -->
+                <a href="team.html" class="nav-item nav-link">Team</a>
                 <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
                 
                         <a href="blog.html" class="nav-item nav-link">Blog </a>
@@ -65,7 +65,78 @@
               <p class="section-title px-5"><span class="px-2">Our Gallery</span></p>
               <h1 class="mb-4">Our Qurious's kids</h1>
           </div>
-          
+          <!-- <div class="row">
+              <div class="col-12 text-center mb-2">
+                  <ul class="list-inline mb-4" id="portfolio-flters">
+                      <li class="btn btn-outline-primary m-1 active"  data-filter="*">All</li>
+                      <li class="btn btn-outline-primary m-1" data-filter=".first">Playing</li>
+                      <li class="btn btn-outline-primary m-1" data-filter=".second">Drawing</li>
+                      <li class="btn btn-outline-primary m-1" data-filter=".third">Reading</li>
+                  </ul>
+              </div> -->
+          <!-- </div>
+          <div class="row portfolio-container">
+              <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                  <div class="position-relative overflow-hidden mb-2">
+                      <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="">
+                      <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                          <a href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                              <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                  <div class="position-relative overflow-hidden mb-2">
+                      <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt="">
+                      <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                          <a href="img/portfolio-2.jpg" data-lightbox="portfolio">
+                              <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                  <div class="position-relative overflow-hidden mb-2">
+                      <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt="">
+                      <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                          <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                              <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                  <div class="position-relative overflow-hidden mb-2">
+                      <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt="">
+                      <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                          <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
+                              <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                  <div class="position-relative overflow-hidden mb-2">
+                      <img class="img-fluid w-100" src="img/portfolio-5.jpg" alt="">
+                      <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                          <a href="img/portfolio-5.jpg" data-lightbox="portfolio">
+                              <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                  <div class="position-relative overflow-hidden mb-2">
+                      <img class="img-fluid w-100" src="img/portfolio-6.jpg" alt="">
+                      <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                          <a href="img/portfolio-6.jpg" data-lightbox="portfolio">
+                              <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
+                          </a>
+                      </div>
+                  </div>
+              </div>
+          </div>-->
       </div>
   </div> 
   <h1 >Coming soon..</h1>
@@ -124,7 +195,7 @@
                 <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
                 <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
                 <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-                <!-- <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a> -->
+                <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
                 <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
                 <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
             </div>
