--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-
-    <style>style="
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/media.css">
+  <style>style="
     /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   /* CSS rules here */
@@ -94,7 +95,7 @@
                 <a href="learrnmore.html" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
-                <img class="img-fluid mt-5" src="img/header.png" alt="">
+                <img class="img-fluid mt-5" src="img/HomeImg.jpg" alt="">
             </div>
         </div>
     </div>
@@ -124,7 +125,7 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="learrnmore.html" class="btn btn-primary mt-2 py-2 px-4">Learn More</a>
+                    <a href="learrnmore.html" class="btn btn-primary mt-2 py-2 px-4 ">Learn More</a>
                 </div>
             </div>
         </div>
@@ -214,10 +215,10 @@
                         <div class="card-body rounded-bottom bg-primary p-5">
                             <form action="https://formspree.io/f/mqkrbqgl" method="post">
                                 <div class="form-group">
-                                    <input type="text" name="name" class="form-control border-0 p-4" placeholder="Your Name" required="required" />
+                                    <input type="text" name="name" class="form-control border-0 p-4 m-2" placeholder="Your Name" required="required" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" name="email" class="form-control border-0 p-4" placeholder="Your Email" required="required" />
+                                    <input type="email" name="email" class="form-control border-0 p-4 m-2" placeholder="Your Email" required="required" />
                                 </div>
                                 <div class="form-group">
                                     <select class="custom-select border-0 px-4" style="height: 47px;" name="class">
@@ -240,87 +241,83 @@
             </div>
         </div>
     </div>
-            <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
-                <div class="row pt-5">
-                    <div class="col-lg-3 col-md-6 mb-5">
-                        <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
-                            style="font-size: 40px; line-height: 40px;">
-                            <i class="flaticon-043-teddy-bear"></i>
-                            <span class="text-white">
-                                <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
-                            </span>
-                        </a>
-                        <p>From Qurious to Victorious.</p>
-                        <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                                style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                                style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                                style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/getqurious/about/?viewAsMember=true"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                                style="width: 38px; height: 38px;" href="https://www.instagram.com/quriousinnovate"><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-5">
-                        <h3 class="text-primary mb-4">Get In Touch</h3>
-                        <div class="d-flex">
-                            <h4 class="fa fa-map-marker-alt text-primary"></h4>
-                            <div class="pl-3">
-                                <h5 class="text-white">Address</h5>
-                                <p>Ahmedabad, Gujarat</p>
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <h4 class="fa fa-envelope text-primary"></h4>
-                            <div class="pl-3">
-                                <h5 class="text-white">Email</h5>
-                                <p>qurious.eduhelp@gmail.com</p>
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <h4 class="fa fa-phone-alt text-primary"></h4>
-                            <div class="pl-3">
-                                <h5 class="text-white">Phone</h5>
-                                <p>+91 8735925858
-                                    <br>
-                                    +91 7383559110
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-5">
-                        <h3 class="text-primary mb-4">Quick Links</h3>
-                        <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                            <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-                            <!-- <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a> -->
-                            <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-                            <a class="text-white" href="Contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-5">
-                        <h3 class="text-primary mb-4">Newsletter</h3>
-                        <form action="">
-                            <div class="form-group">
-                                <input type="text" class="form-control border-0 py-4" placeholder="Your Name"
-                                    required="required" />
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control border-0 py-4" placeholder="Your Email"
-                                    required="required" />
-                            </div>
-                            <div>
-                                <button class="btn btn-primary btn-block border-0 py-3" type="submit">Submit
-                                    Now</button>
-                            </div>
-                        </form>
-                    </div>
+    <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
+        <div class="row pt-5">
+            <div class="col-lg-3 col-md-6 mb-5">
+                <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
+                    style="font-size: 40px; line-height: 40px;">
+                    <i class="flaticon-043-teddy-bear"></i>
+                    <span class="text-white">
+                        <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
 
+                    </span>
+                </a>
+                <p>Qurious to Victorious.</p>
+                <div class="d-flex justify-content-start mt-4">
+                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+                        style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+                        style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+                        style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/getqurious/about/?viewAsMember=true"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+                        style="width: 38px; height: 38px;" href="https://www.instagram.com/quriousinnovate"><i class="fab fa-instagram"></i></a>
                 </div>
-
             </div>
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h3 class="text-primary mb-4">Get In Touch</h3>
+                <div class="d-flex">
+                    <h4 class="fa fa-map-marker-alt text-primary"></h4>
+                    <div class="pl-3">
+                        <h5 class="text-white">Address</h5>
+                        <p>Ahmedabad, Gujarat</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <h4 class="fa fa-envelope text-primary"></h4>
+                    <div class="pl-3">
+                        <h5 class="text-white">Email</h5>
+                        <p>qurious.eduhelp@gmail.com</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <h4 class="fa fa-phone-alt text-primary"></h4>
+                    <div class="pl-3">
+                        <h5 class="text-white">Phone</h5>
+                        <p>+91 8735925858
+                            <br>+91 7383559110
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h3 class="text-primary mb-4">Quick Links</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                    <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                    <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
+                    <!-- <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a> -->
+                    <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
+                    <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5">
+                <h3 class="text-primary mb-4">Newsletter</h3>
+                <form action="">
+                    <div class="form-group">
+                        <input type="text" class="form-control border-0 py-4 m-2" placeholder="Your Name"
+                            required="required" />
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control border-0 py-4 m-2 p-2" placeholder="Your Email"
+                            required="required" />
+                    </div>
+                    <div>
+                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">Submit Now</button>
+                    </div>
+                </form>
+            </div>
+        </div>
 
 
             <a href="#" class="btn btn-primary p-3 back-to-top"><i class="fa fa-angle-double-up"></i></a>
