--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="css/media.css">
+    </head>
 
 <body>
     <div class="container-fluid bg-light position-relative shadow">
@@ -107,25 +108,6 @@
                     </div>
                 </section>
 
-                <!-- <section class="testimonials">
-                    <h2>Student Success Stories</h2>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <blockquote>
-                                "Qurious helped me overcome my fear of math and develop a passion for science. Now, I'm
-                                on track to pursue my dream of becoming an engineer!"
-                                <br> - Sarah Jones, High School Student
-                            </blockquote>
-                        </div>
-                        <div class="col-md-6">
-                            <blockquote>
-                                "Thanks to Qurious' guidance, I discovered my talent for writing and landed an
-                                internship at a local newspaper. I can't wait to see where my career takes me!"
-                                <br> - John Doe, College Student
-                            </blockquote>
-                        </div>
-                    </div>
-                </section> -->
 
                 <section class="benefits">
                     <h2>Why Choose Qurious?</h2>
