--- a/about.html
+++ b/about.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="img/favicon.ico" rel="icon">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Nunito&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/media.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+      <!-- Google Web Fonts -->
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Nunito&display=swap" rel="stylesheet">
+  
+      <!-- Font Awesome -->
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  
+      <!-- Flaticon Font -->
+      <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
     </head>
 
 <body>
@@ -23,21 +26,32 @@
                     <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
                 </span>
             </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link ">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About</a>
-                    <a href="class.html" class="nav-item nav-link">Classes</a>
+                    <a href="index.html" class="nav-item nav-link "><strong> Home </strong>
+                    </a>
+                    <a href="about.html" class="nav-item nav-link active">
+                        <strong> About </strong>
+                    </a>
+                    <a href="class.html" class="nav-item nav-link">
+                        <strong> Classes </strong>
+                    </a>
                     <!-- <a href="team.html" class="nav-item nav-link">Team</a> -->
-                    <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                    <a href="gallery.html" class="nav-item nav-link">
 
-                    <a href="blog.html" class="nav-item nav-link">Blog </a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <strong> Gallery </strong>
+                    </a>
+                    <a href="blog.html" class="nav-item nav-link">
+                        <strong> Blog </strong>
+                    </a>
+                    <a href="contact.html" class="nav-item nav-link">
+                        <strong> Contact </strong></a>
                 </div>
-                <a href="class.html" class="btn btn-primary px-4">Join Class</a>
+                <a href="class.html" class="btn btn-primary px-4 btn-p">
+                    Join Class</a>
             </div>
           
     </div>
@@ -60,9 +74,17 @@
                     <img class="img-fluid rounded mb-5 mb-lg-0" src="img/children.jpg   " alt="">
                 </div>
                 <div class="col-lg-7">
-                    <p class="section-title pr-5"><span class="pr-2">Learn About Us</span></p>
-                    <h1 class="mb-4">Best Place For Your Children</h1>
-                    <p></p>
+                    <p class="section-title pr-5"><span class="pr-2">Explore</span></p>
+                    <h1 class="mb-4"><span class="auto-type"></span></h1>
+                    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+                    <script>
+                        var typed = new Typed(".auto-type", {
+                            strings: ["over 15000+ Career", "At one place", "With Qurious"],
+                            typeSpeed: 150,
+                            backSpeed: 150,
+                            loop: true
+                        })
+                    </script>
                     <div class="row pt-2 pb-4">
                         <div class="col-6 col-md-4">
                             <img class="img-fluid rounded" src="img/childrean1.jpg" alt="">
@@ -192,14 +214,15 @@
                     <h3 class="text-primary mb-4">Newsletter</h3>
                     <form action="">
                         <div class="form-group">
-                            <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
+                            <input type="text" class="form-control border-0 py-4 m-2" placeholder="Your Name"
+                                required="required" />
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control border-0 py-4" placeholder="Your Email"
+                            <input type="email" class="form-control border-0 py-4 m-2" placeholder="Your Email"
                                 required="required" />
                         </div>
                         <div>
-                            <button class="btn btn-primary btn-block border-0 py-3" type="submit">Submit Now</button>
+                            <button class="btn btn-primary btn-block border-0 py-3 m-2" type="submit">Submit Now</button>
                         </div>
                     </form>
                 </div>
@@ -210,20 +233,6 @@
     <a href="#" class="btn btn-primary p-3 back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
-
-    <!-- Contact Javascript File -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
 
 
 </body>
