--- a/contact.html
+++ b/contact.html
@@ -4,26 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+      <!-- Google Web Fonts -->
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Nunito&display=swap" rel="stylesheet">
   
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Nunito&display=swap" rel="stylesheet">
-
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-
-    <!-- Flaticon Font -->
-    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/media.css">
+      <!-- Font Awesome -->
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  
+      <!-- Flaticon Font -->
+      <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
 </head>
 
 <body>
@@ -36,20 +28,32 @@
                     <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
                 </span>
             </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="class.html" class="nav-item nav-link">Classes</a>
+                    <a href="index.html" class="nav-item nav-link"><strong> Home </strong>
+                    </a>
+                    <a href="about.html" class="nav-item nav-link">
+                        <strong> About </strong>
+                    </a>
+                    <a href="class.html" class="nav-item nav-link">
+                        <strong> Classes </strong>
+                    </a>
                     <!-- <a href="team.html" class="nav-item nav-link">Team</a> -->
-                    <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                    <a href="blog.html" class="nav-item nav-link">Blog </a>
-                    <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                    <a href="gallery.html" class="nav-item nav-link">
+
+                        <strong> Gallery </strong>
+                    </a>
+                    <a href="blog.html" class="nav-item nav-link">
+                        <strong> Blog </strong>
+                    </a>
+                    <a href="contact.html" class="nav-item nav-link active">
+                        <strong> Contact </strong></a>
                     </div>
-                    <a href="class.html" class="btn btn-primary px-4">Join Class</a>
+                    <a href="class.html" class="btn btn-primary px-4 btn-p">
+                        Join Class</a>
             
                 </div>
                  </div>
@@ -209,14 +213,15 @@
                 <h3 class="text-primary mb-4">Newsletter</h3>
                 <form action="">
                     <div class="form-group">
-                        <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
+                        <input type="text" class="form-control border-0 py-4 m-2" placeholder="Your Name"
+                            required="required" />
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control border-0 py-4" placeholder="Your Email"
+                        <input type="email" class="form-control border-0 py-4 m-2" placeholder="Your Email"
                             required="required" />
                     </div>
                     <div>
-                        <button class="btn btn-primary btn-block border-0 py-3" type="submit">Submit Now</button>
+                        <button class="btn btn-primary btn-block border-0 py-3 m-2" type="submit">Submit Now</button>
                     </div>
                 </form>
             </div>
@@ -227,18 +232,6 @@
     <a href="#" class="btn btn-primary p-3 back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
-        <!-- JavaScript Libraries -->
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="lib/isotope/isotope.pkgd.min.js"></script>
-        <script src="lib/lightbox/js/lightbox.min.js"></script>
-
-        <!-- Contact Javascript File -->
-        <script src="mail/jqBootstrapValidation.min.js"></script>
-        <script src="mail/contact.js"></script>
-
-        <!-- Template Javascript -->
-        <script src="js/main.js"></script>
+   
     </body>
+</html>
