--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <!--for animated bg-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-      <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Nunito&display=swap" rel="stylesheet">
@@ -137,7 +139,7 @@
                         <!-- <img class="img-fluid rounded" src="img/childrean1.jpg" alt=""> -->
                         <!-- </div> -->
                         <div class="col-6 col-md-8">
-                            <ul class="list-inline m-0" style="list-style: none"    >
+                            <ul class="list-inline m-0">
                                 <li class="py-2 border-top border-bottom"><i
                                         class="fa fa-check text-primary mr-3"></i>Personalized guidance from expert
                                     counselors</li>
@@ -225,14 +227,14 @@
                         provide perticular skill training also so u can expand your interest</h1>
                     </p>
                     <ul >
-                        <li class="py-2"  ><i class=""></i>Personalized guidance from expert
+                        <li class="py-2"  style="position: relative;left: 155px;"><i class=""></i>Personalized guidance from expert
                             counselors
 
                         </li>
-                        <li class="py-2"  ><i class=""></i>Interactive workshops and
+                        <li class="py-2"  style="position: relative;left: 155px;"><i class=""></i>Interactive workshops and
                             activities
                         </li>
-                        <li class="py-2" ><i class=""></i>Career exploration tools and
+                        <li class="py-2" style="position: relative;left: 155px;"><i class=""></i>Career exploration tools and
                             resources</li>
                     </ul>
 
