--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
                         provide perticular skill training also so u can expand your interest</h1>
                     </p>
                     <ul >
-                        <li class="py-2"  style="position: relative;left: 155px;"><i class=""></i>Personalized guidance from expert
+                        <li class="py-2"  ><i class="fa fa-check text-primary mr-3"></i>Personalized guidance from expert
                             counselors
 
                         </li>
-                        <li class="py-2"  style="position: relative;left: 155px;"><i class=""></i>Interactive workshops and
+                        <li class="py-2" ><i class="fa fa-check text-primary mr-3"></i>Interactive workshops and
                             activities
                         </li>
-                        <li class="py-2" style="position: relative;left: 155px;"><i class=""></i>Career exploration tools and
+                        <li class="py-2" ><i class="fa fa-check text-primary mr-3"></i>Career exploration tools and
                             resources</li>
                     </ul>
 
